	* Fixed issue #17260: Installation of version/workspaces cannot be skipped in migration wizard (Thanks to Francois Suter)
	* Fixed bug #17215: TCEFORM.tt_content.colPos.removeItems not working correctly on colPos with new backend layouts (Thanks to Jo Hasenau)

2011-01-24  Steffen Kamper  <steffen@typo3.org>

	* Merge of extension manager for RC2
	* Fixed bug #17275: Pagetree preloads huge amount of pages with initial load / refresh
	* Follow-up to #17222: in case of render outside the BE set default value
	* Fixed bug #17222: fitToParent calculates wrong height

2011-01-24  Xavier Perseguers  <typo3@perseguers.ch>

	* Raised DBAL to version 1.2.0
	* Fixed bug #17267: Live search is unusable with Oracle

2011-01-24  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #17274: SQL error in Update Wizard of workspaces

2011-01-24  Tobias Liebig  <mail_typo3@etobi.de>

	* Fixed bug #17078: in fileadmin saving changes from t3editor doesn't work
	* Fixed bug #17270: t3editor not enabled when editing .php/.inc files
	* Fixed bug #17268: t3editor dont save the "deactivated" state in fileadmin/fileedit

2011-01-24  Francois Suter  <francois.suter@typo3.org>

	* Follow-up to #16848: Added link to buzz.typo3.org article about changes to CSH in FlexForms to NEWS.txt

2011-01-24  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17263: JS error in contexthelp

2011-01-23  Ingo Renner  <ingo@typo3.org>

	* Fixed phpDoc comment of t3lib_utility_Mail::getSystemFromAddress() and some readability clean-up
	* Follow-up to #17214: Page module not using full width with default layout

2011-01-22  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #17181: Corrected typo in _.htaccess (Thanks to Simon Schaufelberger)

2011-01-22  Ernesto Baschny  <ernesto.baschny@typo3.org>

	* Release of TYPO3 4.5.0rc1

2011-01-22  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17203: The ExtDirect token needs to be regenerated after relogin by popup window (Thanks to Helmut Hummel)